--- a/client/index.html
+++ b/client/index.html
@@ -11,19 +11,17 @@
           Watchout!
         </div>
         <div class="gamespace">
-          <div class="scoreboard">
-            <!-- Modify the scoreboard when important events occur in your game! -->
+<!--           <div class="scoreboard">
             <div class="highscore">High score: <span>0</span></div>
             <div class="current">Current score: <span>0</span></div>
             <div class="collisions">Collisions: <span>0</span></div>
-          </div>
+          </div> -->
           <div class="game-area">
           </div>
         </div>
       </div>
       <div class="col-3"></div>
     </div>
-    <div class="board"><div class="mouse"></div></div>
     <script src="lib/d3.js" charset="utf-8"></script>
     <script src='watchout.js'></script>
   </body>
