Implement simple score board

--- a/client/index.html
+++ b/client/index.html
@@ -8,14 +8,16 @@
       <div  class="col-3"></div>
       <div class="col-6">
         <div class="header">
+          <div class="col-6">
           Watchout!
-        </div>
-        <div class="gamespace">
-<!--           <div class="scoreboard">
+          </div>
+          <div class="scoreboard col-6">
             <div class="highscore">High score: <span>0</span></div>
             <div class="current">Current score: <span>0</span></div>
             <div class="collisions">Collisions: <span>0</span></div>
-          </div> -->
+          </div>
+        </div>
+        <div class="gamespace">
           <div class="game-area">
           </div>
         </div>
